--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -452,7 +452,7 @@ input.gui-point-button:active, input.gui-rect-button:active
 
 .gui-light
   background : url('/admin/ui/images/light-sprite.png') left top no-repeat transparent
-  padding    : 9px 0 9px 33px
+  padding    : 11px 0 9px 33px
   min-height : 14px
   min-width  : 14px
   display    : inline-block
@@ -504,13 +504,16 @@ input.gui-point-button:active, input.gui-rect-button:active
 .unreachable
   color : riakred
 
+.inline-block
+  display : inline-block
+
 
 /* RESPONSIVE MEDIA QUERIES */
 
 @media screen and (min-width : 1100px)
 
   #wrapper
-    width : 1100px
+    max-width : 1500px
 
 @media screen and (max-width : 699px)
 
