--- a/priv/admin/css/cluster.styl
+++ b/priv/admin/css/cluster.styl
@@ -4,9 +4,18 @@ CSS to be applied ONLY on the cluster page
 */
 
 @import reusable
+  
 
 #cluster-page
-  
+
+  #current-area, #planned-area
+    float : left
+    width : 49%
+
+  #current-area
+    margin : 0 2% 45px 0
+ 
+
   h3
     copy-font()
 
@@ -16,6 +25,9 @@ CSS to be applied ONLY on the cluster page
     
   .add-node-table tr td
     padding-top : 25px
+
+  #node-list
+    margin-top : 20px
     
   .more-node-actions
     display : none
@@ -41,14 +53,32 @@ CSS to be applied ONLY on the cluster page
       singleCorner(top, right, 4px)
       background     : darkened
 
+    .gui-switch-container
+      margin-top : 1px
 
-  .status-box
-    dimensions(170px, auto)
+
+  .name-box .field-container
+    min-width   : 75%
+    margin-left : 4%
+
     
   .actions-header
     padding-left : 6px
 
+  .stage-button
+    display    : block
+    background : url('/admin/ui/images/stagebutton-sprite.png') center 4px no-repeat transparent
+    width      : 58px
+    height     : 38px
 
+    &:hover
+      background-position : center -36px
+
+    &:active
+      background-position : center -78px
+
+  .staged .stage-button
+    background-position : center -78px
 
   .pct-box
     margin-top     : 8px
@@ -225,10 +255,49 @@ CSS to be applied ONLY on the cluster page
 
   /* RESPONSIVE MEDIA QUERIES */
 
+
+  @media screen and (min-width : 1300px)
+
+    .gui-light
+      vertical-align : middle
+      padding        : 9px 0 9px 14px
+
+    .gui-light span
+      display : none
+
+    .name-box .field-container
+      vertical-align : middle
+      padding-top    : 5px
+
+    .ring_pct-box, .memory-box
+      width : auto
+
+    .free-memory
+      display : none
+
+  @media screen and (min-width : 1500px)
+
+    .gui-light
+      padding-left : 33px
+
+  @media screen and (max-width : 1300px)
+
+    #current-area, #planned-area
+      float : none
+      width : auto
+
+    #current-area
+      margin-right : 0
+
   @media screen and (min-width : 1100px)
 
     .replacement-controls
       width : 250px
+
+  @media screen and (max-width : 1050px)
+
+    .name-box .field-container
+      min-width : 68%;
 
   @media screen and (max-width : 959px)
 
@@ -254,16 +323,23 @@ CSS to be applied ONLY on the cluster page
       padding-left : 0
       text-align   : center
 
-  @media screen and (max-width : 699px)
+  @media screen and (max-width : 890px)
 
-    .status-box, .ring_pct-box, .memory-box
-      width : auto
-    
-    .status-box
-      text-align : center
-      
+    .gui-light
+      vertical-align : middle
+      padding        : 9px 0 9px 14px
+
     .gui-light span
       display : none
+
+    .name-box .field-container
+      vertical-align : middle
+      padding-top    : 5px
+
+    .ring_pct-box, .memory-box
+      width : auto
+
+  @media screen and (max-width : 699px)
       
     .markdown-box, .shutdown-box, .leave-cluster-box
       margin-right : 10px
@@ -278,3 +354,4 @@ CSS to be applied ONLY on the cluster page
       margin : 0 0 0 5px
 
   /* END RESPONSIVE MEDIA QUERIES */
+
