--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -33,31 +33,47 @@
         </div>
     </div><!-- #add-node -->
 
-    <h2 class="gui-headline has-cut">
-        Node List
-        <span id="total-number" class="gui-text"></span>
-    </h2>
-    <div id="node-list" class="hide">
-        <table class="list-table" id="cluster-table">
-            <tr class="table-head has-cut">
-                <td><h3>Status</h3></td>
-                <td><h3>Name</h3></td>
-                <td><h3 class="actions-header">Actions</h3></td>
-                <td><h3>Partitions</h3></td>
-                <td><h3>RAM Use</h3></td>
-            </tr>
-        </table>
+    <div id="current-area">
+        <h2 class="gui-headline">
+            Current Cluster
+            <span id="total-number" class="gui-text"></span><br/>
+        </h2>
+        <span class="gui-text-flat italic">Click the "Stage" button next to all nodes you wish to change.</span>
+        <div id="node-list" class="hide">
+            <table class="list-table" id="cluster-table">
+                <tr class="table-head has-cut">
+                    <td><h4 class="gui-headline-bold">Stage</h4></td>
+                    <td><h4 class="gui-headline-bold">Name &amp; Status</h4></td>
+                    <td><h4 class="gui-headline-bold actions-header">Actions</h4></td>
+                    <td><h4 class="gui-headline-bold">Partitions</h4></td>
+                    <td><h4 class="gui-headline-bold">RAM Use</h4></td>
+                </tr>
+            </table>
+        </div>
+        <div class="spinner-box">
+            <img id="cluster-spinner" class="spinner" src="/admin/ui/images/spinner.gif">
+        </div>
     </div>
-    <div class="spinner-box"><img id="cluster-spinner" class="spinner" src="/admin/ui/images/spinner.gif"></div>
+
+    <div id="planned-area">
+        <h2 class="gui-headline">
+            Planned Cluster
+        </h2>
+        <span class="gui-text-flat italic">This is how your cluster will look after convergence.</span>
+    </div>
+
+    <div class="clear"></div>
 
     <!-- node template -->
     <table class="hide">
         <tr class="node row-template">
-            <td class="status-box gui-text">
-                <a class="gui-light status-light"><span class="status">Joining...</span></a>
+            <td class="gui-text">
+                <a class="stage-button"></a>
             </td>
             <td class="name-box gui-text">
-                <div class="gui-text">
+                <a class="gui-light status-light inline-block">
+                    <span class="status">Joining...</span>
+                </a><div class="gui-text field-container inline-block">
                     <div class="name gui-field"></div>
                 </div>
             </td>
@@ -113,7 +129,7 @@
                         <span class="leave-cluster-label block">Leave</span>
                         <div class="clear"></div>
                     </div>
-                    <!-- These are the dropdown and checkboxes for the new management protocol
+                    <!-- These are the dropdown and checkboxes for the new management protocol -->
                     <div class="replacement-controls">
                         <div class="gui-dropdown-wrapper replacement-node-dropdown">
                             <div class="gui-dropdown-bg gui-text">Replacement Node</div>
@@ -133,7 +149,7 @@
                             <span>Force Replace</span>
                         </div>
                     </div>
-                    -->
+
                     <div class="clear"></div>
                 </div>
                 <div class="clear"></div>
