--- a/priv/admin/css/cluster.styl
+++ b/priv/admin/css/cluster.styl
@@ -4,37 +4,16 @@ CSS to be applied ONLY on the cluster page
 */
 
 @import reusable
-  
+
 
 #cluster-page
 
-  .warning
-    display : block
-    padding : 10px 0 0
-    color   : riakred
-
   #current-area, #planned-area
     float : left
-    width : 47%
+    width : 49%
 
   #current-area
-    margin : 0 0 45px 0
-
-
-  #area-separator
-    width      : 6%
-    height     : 450px
-    float      : left
-    text-align : center
-
-    div
-      margin     : 0 auto
-      width      : 1px
-      height     : 100%
-      background : lightWhite
- 
-  span.gui-text-flat
-    line-height : 1.5
+    margin : 0 2% 45px 0
 
   h3
     copy-font()
@@ -83,9 +62,16 @@ CSS to be applied ONLY on the cluster page
   #add-node
     padding-top   : 40px
     margin-bottom : 45px
-    
+
   .add-node-table tr td
     padding-top : 25px
+
+  #node-list
+    margin-top : 20px
+
+  .more-node-actions
+    display : none
+    vendor('box-shadow', 0 3px 5px darkened)
 
   .list-header
     min-height : 18px
@@ -94,90 +80,37 @@ CSS to be applied ONLY on the cluster page
       float : left
       margin-bottom : 30px
 
-      h4
-        display : inline-block
+    .gui-switch-container
+      margin-top : 1px
 
-  #node-list, #planned-list
-    margin-top : 20px
 
-  #node-list
-    .item1
-      width : 18%
-    .item2
-      width : 42%
-    .item3
-      width : 18%
-    .item4
-      width : 22%
+  .name-box .field-container
+    min-width   : 75%
+    margin-left : 4%
 
-  .node
-    margin-bottom : 10px
-    position      : relative
 
-  .node > div
-    float : left
+  .actions-header
+    padding-left : 6px
 
-  .node > div.clear
-    float : none
+  .stage-button
+    display    : block
+    background : url('/admin/ui/images/stagebutton-sprite.png') center 4px no-repeat transparent
+    width      : 58px
+    height     : 38px
 
-  .toggle-container
-    overflow : visible
-    padding  : 0
+    &:hover
+      background-position : center -36px
 
-    .actions-toggle
-      dimensions(82px, 30px)
-      position   : relative
-      overflow   : visible
-      padding    : 0
-      background : url('/admin/ui/images/actions-toggle-text.png') -5px top no-repeat rgba(0, 0, 0, .3)
-      margin-top : 3px
+    &:active
+      background-position : center -78px
 
-      a
-        dimensions(48px, 34px)
-        css-transition(left .2s ease)
-        position   : absolute
-        display    : inline-block
-        background : url('/admin/ui/images/actions-toggle-slider.png') left top no-repeat transparent
-        top        : 0
-        left       : -5px
-
-  .open .actions-toggle a
-    css-transition(left .2s ease)
-    left : 38px
-
-  .name-box
-    overflow : visible
-
-  .ring-pct, .used-memory, .action-name
-    monospace();
-
-  .used-memory
-    display : inline-block
-    padding : 0 0 0 5px
-    vertical-align : middle
-
-  .action-name
-    display     : inline-block
-    padding-top : 8px
-
-  .replacing-box .field-container
-    width : 100%
-
-  #planned-list
-    .item1
-      width : 40%
-    .item2
-      width : 17%
-    .item3
-      width : 17%
-    .item4
-      width : 26%
-
+  .staged .stage-button
+    background-position : center -78px
 
   .plan-details-header
     margin-top : 30px
     padding    : 10px 0
-  
+
   .accept-plan
     position   : relative
     padding    : 15px 0
@@ -200,7 +133,7 @@ CSS to be applied ONLY on the cluster page
 
   #commit-button
     absoluteRight(0, 12px)
-    
+
   .button-column
     text-align : right
 
@@ -241,14 +174,14 @@ CSS to be applied ONLY on the cluster page
     padding    : 8px 10px 9px 12px
     background : rgba(232, 78, 78, .5)
     border     : 1px solid lighten(rgba(232, 78, 78, .5), 15%)
-    
+
     .error-link
       headline-bold()
       padding-left : 5px
-      
+
       &:hover
         text-decoration : underline
-    
+
     .close-error
       dimensions(16px, 16px)
       opaque(.6)
@@ -257,21 +190,21 @@ CSS to be applied ONLY on the cluster page
       float          : right
       vertical-align : middle
       background     : url('/admin/ui/images/close-error.png') left top no-repeat transparent
-      
+
       &:hover
         opaque(1)
-        
+
 
   .memory-box
     width : 175px
-        
+
   .membar-bg
     corners()
     dimensions(79px, 30px)
     position       : relative
     display        : inline-block
     vertical-align : middle
-    
+
   .membar-fg
     corners()
     gradient(rgba(255, 255, 255, .4), rgba(255, 255, 255, .05))
@@ -281,12 +214,12 @@ CSS to be applied ONLY on the cluster page
     width   : 75px
     z-index : 5
     border  : 2px solid #1d1d1d
-    
+
   .mem-colors
     dimensions(75px, 26px)
     float  : left
     margin : 2px 0 0 2px
-    
+
   .membar-mem
     dimensions(auto, 26px)
     background : url('/admin/ui/images/mem-bar-overlay.png') left top repeat transparent
@@ -299,7 +232,7 @@ CSS to be applied ONLY on the cluster page
     float      : left
     z-index    : 1
     background-color : rgba(65, 179, 243, .8)
-    
+
   .erlang-mem
     dimensions(auto, 26px)
     background : url('/admin/ui/images/mem-bar-overlay.png') left top repeat transparent
@@ -319,7 +252,7 @@ CSS to be applied ONLY on the cluster page
     dimensions(72px, 13px)
     background : url('/admin/ui/images/pointer.png') center top no-repeat transparent
     margin-top : 8px
-    
+
   .actions-box
     corners()
     width         : 92%
@@ -335,7 +268,7 @@ CSS to be applied ONLY on the cluster page
       border-bottom : 1px solid lightWhite
       padding       : 0 0 12px
 
-    
+
   .actions-box > div > span
     copy-font()
     color        : lightGray
@@ -355,7 +288,7 @@ CSS to be applied ONLY on the cluster page
 
     &.active
       opaque(1)
-   
+
   .replacement-controls
     width         : auto
     margin-top    : 18px
@@ -367,7 +300,7 @@ CSS to be applied ONLY on the cluster page
 
     select
       margin-top : -38px
-   
+
   .replacement-node-dropdown
     margin-bottom : 5px
 
@@ -403,143 +336,75 @@ CSS to be applied ONLY on the cluster page
 
   /* RESPONSIVE MEDIA QUERIES */
 
-  @media screen and (max-width : 1200px)
+  @media screen and (min-width : 1300px)
 
-    #area-separator
+    .gui-light
+      vertical-align : middle
+      padding        : 9px 0 9px 14px
+
+    .gui-light span
       display : none
 
+    .name-box .field-container
+      vertical-align : middle
+      padding-top    : 5px
+
+    .ring_pct-box, .memory-box
+      width : auto
+
+    .free-memory
+      display : none
+
+  @media screen and (min-width : 1500px)
+
+    .gui-light
+      padding-left : 33px
+
+  @media screen and (max-width : 1300px)
+
     #current-area, #planned-area
-      width : 100%
+      float : none
+      width : auto
 
-    #planned-area
-      padding-top : 30px
-      border-top  : 1px solid lightWhite
+    #current-area
+      margin-right : 0
 
-    .field-container
-      width : 90%
-
-    #node-list
-      .item1
-        width : 100px
-      .item2
-        width : 500px
-      .item3
-        width : 100px
-      .item4
-        width : 150px
-
-    #planned-list
-      .item1
-        width : 300px
-      .item2
-        width       : 100px
-        margin-left : 25px
-      .item3
-        width : 100px
-      .item4
-        width : 350px
-
-  @media screen and (max-width : 950px)
-
-    #node-list
-      .item1
-        width : 100px
-      .item2
-        width : 400px
-      .item3
-        width : 100px
-      .item4
-        width : 150px
-
-    #planned-list
-      .item1
-        width : 275px
-      .item2
-        width : 100px
-      .item3
-        width : 100px
-      .item4
-        width : 225px
-
-  @media screen and (max-width : 850px)
-
-    #node-list
-      .item1
-        width : 100px
-      .item2
-        width : 300px
-        
-        .field-container
-          width : 75%
+  @media screen and (min-width : 1100px)
 
       .item3
         width : 100px
       .item4
         width : 150px
 
-    #planned-list
-      .item3
-        display : none
+  @media screen and (max-width : 1050px)
+
+    .name-box .field-container
+      min-width : 68%;
+
+  @media screen and (max-width : 959px)
 
     .used-memory
       display : none
 
-  @media screen and (max-width : 700px)
-
-    #node-list
-      .item1
-        width : 100px
-      .item2
-        width : 200px
-        
-        .field-container
-          width : 75%
-
-      .item3
-        width : 100px
-      .item4
-        width : 150px
-
-    #planned-list
-      .item1
-        width : 200px
-      .item2
-        width       : 100px
-        margin-left : 0
-      .item4
-        width : 200px
+  @media screen and (max-width : 890px)
 
     .gui-light
+      vertical-align : middle
+      padding        : 9px 0 9px 14px
+
+    .gui-light span
       display : none
 
-  @media screen and (max-width : 600px)
+    .name-box .field-container
+      vertical-align : middle
+      padding-top    : 5px
 
-    #node-list
-      .item1
-        display : none
-      .item2
-        width : 40%
-        .field-container
-          width : 95%
-      .item4
-        width : 100px
+    .ring_pct-box, .memory-box
+      width : auto
 
-    #planned-list
-      .item1
-        width : 40%
-        .field-container
-          width : 95%
-      .item2
-        width : 20%
-        margin-right : 2%
-      .item4
-        width : 38%
-        .field-container
-          width : 95%
-    
-    .actions-container
-      display : none
+  @media screen and (max-width : 699px)
 
+    .markdown-box, .shutdown-box, .leave-cluster-box
+      margin-right : 10px
 
-
-
+  /* END RESPONSIVE MEDIA QUERIES */
