--- a/priv/admin/css/snapshot.styl
+++ b/priv/admin/css/snapshot.styl
@@ -9,28 +9,29 @@ CSS to be applied ONLY on the snapshot page
 
   #healthy-cluster, #unhealthy-cluster
     padding-top : 25px
-    
+
     section
       padding-left : 336px
-      
+
     h2
       padding-top : 20px
-      
+
     h3
       margin-top : 30px
-      
+
     ul
       margin : 10px 0 0 20px
-    
+
     li
       headline-font()
       line-height : 1.5
       font-size   : 15px
-      
+
       a
         color : lightGray
 
   #health-indicator
+    dimensions(337px, 310px)
     float        : left
     margin-right : 25px
 
@@ -44,15 +45,12 @@ CSS to be applied ONLY on the snapshot page
 
   @media screen and (max-width : 899px)
 
-    #healthy-cluster #health-indicator
+    #health-indicator
       dimensions(279px, 249px)
 
-    #unhealthy-cluster #health-indicator
-      dimensions(250px, 249px)
-      
     #healthy-cluster section, #unhealthy-cluster section
       padding-left : 275px
-      
+
   @media screen and (max-width : 499px)
 
     .health-info
@@ -62,7 +60,7 @@ CSS to be applied ONLY on the snapshot page
       margin  : 0 auto
       float   : none
       display : block
-      
+
     #healthy-cluster section, #unhealthy-cluster section
       padding-left : 0
       margin       : 0 auto
@@ -70,4 +68,3 @@ CSS to be applied ONLY on the snapshot page
 
 
   /* END RESPONSIVE MEDIA QUERIES */
-
